# flora-finder

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/flora_finder/: cli.py  evc_layer.py  flora_finder.py
tests/: test_flora_finder.py
